@@ -30,6 +30,7 @@
 	- add amd64 as alias for x86_64 (#99553).
 	- fix: add -n to brp-compress to avoid needless file conflicts.
 	- fix: ia32 on ia64 segfaults because of automagic file relocations.
+	- speed up convertdb1 (#103206).
 
 4.1 -> 4.2:
 	- set cachesize without a dbenv, the default is far too small.
